[gd_scene load_steps=23 format=3 uid="uid://gpb137l3dhbg"]

[ext_resource type="Script" path="res://Stage2/stage2.gd" id="1_akxya"]
[ext_resource type="PackedScene" uid="uid://dlkq64kf8131e" path="res://HeartBar/HeartBar.tscn" id="2_3smwa"]
[ext_resource type="Script" path="res://Stage1/Score.gd" id="3_ksikq"]
[ext_resource type="PackedScene" uid="uid://dxfmjk3a1rfvo" path="res://UI/MobileInput/Joystick.tscn" id="4_qow0o"]
[ext_resource type="PackedScene" uid="uid://bc41q2kltisn2" path="res://WinAndLose/game_over_screen.tscn" id="5_efmwm"]
[ext_resource type="PackedScene" uid="uid://dgkbufrmqv0hd" path="res://WinAndLose/win_screen.tscn" id="6_t7wcw"]
[ext_resource type="Texture2D" uid="uid://c4m0t8hhou61f" path="res://Style/Images/BackGround/Jupter_fase2.png" id="7_5wdqu"]
[ext_resource type="PackedScene" uid="uid://dt724p02hihsy" path="res://Player/player.tscn" id="8_eoakc"]
[ext_resource type="PackedScene" uid="uid://ij1a08e8l6oo" path="res://Wall/bullet_wall.tscn" id="9_qox5s"]
[ext_resource type="PackedScene" uid="uid://cgfuo5bhdlnfh" path="res://Wall/player_wall.tscn" id="10_yps2u"]
[ext_resource type="Script" path="res://Enemies/Enemy_Atirador/Path2D.gd" id="11_db672"]
[ext_resource type="PackedScene" uid="uid://b3mrvwxi6oiyy" path="res://Enemies/Boss/path_boss_2d.tscn" id="12_ndc55"]
[ext_resource type="Script" path="res://Enemies/Enemy_Rapido/Path2D_enemy_rapido.gd" id="12_oj6y3"]
[ext_resource type="Script" path="res://Enemies/Boss/PathBoss2D.gd" id="14_uotdl"]
[ext_resource type="AudioStream" uid="uid://dxd7svfyxhgo0" path="res://Style/Sounds/DuckDeath.mp3" id="15_p82tw"]
[ext_resource type="AudioStream" uid="uid://0o3qooi1d5gx" path="res://Style/Sounds/win.mp3" id="16_lo2hu"]
[ext_resource type="AudioStream" uid="uid://bgocq6sieuwvs" path="res://Style/Sounds/game-over.mp3" id="17_cw4lw"]
[ext_resource type="AudioStream" uid="uid://d383ktwf1mjpa" path="res://Style/Sounds/game.mp3" id="18_haias"]

[sub_resource type="LabelSettings" id="LabelSettings_1up5w"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_6muqy"]
scenes/2/scene = ExtResource("9_qox5s")
scenes/3/scene = ExtResource("10_yps2u")

[sub_resource type="TileSet" id="TileSet_ajpey"]
sources/0 = SubResource("TileSetScenesCollectionSource_6muqy")

[sub_resource type="Curve2D" id="Curve2D_aaem7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 26, 60, 0, 0, 0, 0, 244, 57, 0, 0, 0, 0, 291, 87, 0, 0, 0, 0, 247, 115, 0, 0, 0, 0, 80, 115, 0, 0, 0, 0, 34, 151, 0, 0, 0, 0, 76, 198, 0, 0, 0, 0, 180, 154, 0, 0, 0, 0, 225, 197, 0, 0, 0, 0, 256, 195, 0, 0, 0, 0, 286, 237, 0, 0, 0, 0, 221, 278, 0, 0, 0, 0, 161, 234, 0, 0, 0, 0, 75, 277, 0, 0, 0, 0, 34, 328, 0, 0, 0, 0, 80, 368, 0, 0, 0, 0, 162, 310, 0, 0, 0, 0, 226, 360, 0, 0, 0, 0, 284, 320, 0, 0, 0, 0, 297, 366, 0, 0, 0, 0, 266, 406, 0, 0, 0, 0, 40, 405)
}
point_count = 22

[node name="Game2" type="Node2D" groups=["game"]]
script = ExtResource("1_akxya")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartBar" parent="CanvasLayer" instance=ExtResource("2_3smwa")]
offset_left = 1.0
offset_right = 153.0
offset_bottom = 48.0
scale = Vector2(0.60067, 0.673407)

[node name="Score" type="Label" parent="CanvasLayer" groups=["score"]]
offset_left = 208.0
offset_right = 256.0
offset_bottom = 26.0
scale = Vector2(1.18557, 0.780808)
text = "Score:00000"
label_settings = SubResource("LabelSettings_1up5w")
vertical_alignment = 1
script = ExtResource("3_ksikq")

[node name="JoystickBase" parent="CanvasLayer" instance=ExtResource("4_qow0o")]
visible = false
position = Vector2(128, 448)
vanchor = 1

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("5_efmwm")]
process_mode = 2
visible = false

[node name="WinScreen" parent="CanvasLayer" instance=ExtResource("6_t7wcw")]
process_mode = 2
visible = false

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("7_5wdqu")
centered = false

[node name="Player" parent="." groups=["player"] instance=ExtResource("8_eoakc")]
position = Vector2(160, 608)
motion_mode = 1

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_ajpey")
format = 2
layer_0/tile_data = PackedInt32Array(1769472, 0, 196608, 1769473, 0, 196608, 1769474, 0, 196608, 1769475, 0, 196608, 1769476, 0, 196608, 1769477, 0, 196608, 1769478, 0, 196608, 1769479, 0, 196608, 1769480, 0, 196608, 1769481, 0, 196608, 1769482, 0, 196608, 1769483, 0, 196608, 1769484, 0, 196608, 1769485, 0, 196608, 1769486, 0, 196608, 1769487, 0, 196608, 1769488, 0, 196608, 1769489, 0, 196608, 1769490, 0, 196608, 1769491, 0, 196608, 2686975, 0, 131072, 2621439, 0, 131072, 2555903, 0, 131072, 2490367, 0, 131072, 2424831, 0, 131072, 2359295, 0, 131072, 2293759, 0, 131072, 2228223, 0, 131072, 2162687, 0, 131072, 2097151, 0, 131072, 2031615, 0, 131072, 1966079, 0, 131072, 1900543, 0, 131072, 1835007, 0, 131072, 1769471, 0, 131072, 1703935, 0, 131072, 1638399, 0, 131072, 1572863, 0, 131072, 1507327, 0, 131072, 1441791, 0, 131072, 1376255, 0, 131072, 1310719, 0, 131072, 1245183, 0, 131072, 1179647, 0, 131072, 1114111, 0, 131072, 1048575, 0, 131072, 983039, 0, 131072, 917503, 0, 131072, 851967, 0, 131072, 786431, 0, 131072, 720895, 0, 131072, 655359, 0, 131072, 589823, 0, 131072, 524287, 0, 131072, 458751, 0, 131072, 393215, 0, 131072, 327679, 0, 131072, 262143, 0, 131072, 196607, 0, 131072, 131071, 0, 131072, 65535, 0, 131072, -1, 0, 131072, -65516, 0, 131072, 20, 0, 131072, 65556, 0, 131072, 131092, 0, 131072, 196628, 0, 131072, 262164, 0, 131072, 327700, 0, 131072, 393236, 0, 131072, 458772, 0, 131072, 524308, 0, 131072, 589844, 0, 131072, 655380, 0, 131072, 720916, 0, 131072, 786452, 0, 131072, 851988, 0, 131072, 917524, 0, 131072, 983060, 0, 131072, 1048596, 0, 131072, 1114132, 0, 131072, 1179668, 0, 131072, 1245204, 0, 131072, 1310740, 0, 131072, 1376276, 0, 131072, 1441812, 0, 131072, 1507348, 0, 131072, 1572884, 0, 131072, 1638420, 0, 131072, 1703956, 0, 131072, 1769492, 0, 131072, 1835028, 0, 131072, 1900564, 0, 131072, 1966100, 0, 131072, 2031636, 0, 131072, 2097172, 0, 131072, 2162708, 0, 131072, 2228244, 0, 131072, 2293780, 0, 131072, 2359316, 0, 131072, 2424852, 0, 131072, 2490388, 0, 131072, 2555924, 0, 131072, 2621460, 0, 131072, 2621459, 0, 131072, 2621458, 0, 131072, 2621457, 0, 131072, 2621456, 0, 131072, 2621455, 0, 131072, 2621454, 0, 131072, 2621453, 0, 131072, 2621452, 0, 131072, 2621451, 0, 131072, 2621450, 0, 131072, 2621449, 0, 131072, 2621448, 0, 131072, 2621447, 0, 131072, 2621446, 0, 131072, 2621445, 0, 131072, 2621444, 0, 131072, 2621443, 0, 131072, 2621442, 0, 131072, 2621441, 0, 131072, 2621440, 0, 131072, -65537, 0, 131072, -131072, 0, 131072, -131071, 0, 131072, -131070, 0, 131072, -131069, 0, 131072, -131068, 0, 131072, -131067, 0, 131072, -131066, 0, 131072, -131065, 0, 131072, -131064, 0, 131072, -131063, 0, 131072, -131062, 0, 131072, -131061, 0, 131072, -131060, 0, 131072, -131059, 0, 131072, -131058, 0, 131072, -131057, 0, 131072, -131056, 0, 131072, -131055, 0, 131072, -131054, 0, 131072, -131053, 0, 131072, -131052, 0, 131072)

[node name="PathAtirador2D" type="Path2D" parent="." groups=["path"]]
curve = SubResource("Curve2D_aaem7")
script = ExtResource("11_db672")
spawnTime = 4
quantityEnemy = 12
quantityEnemiesOnScreen = 3
health = 5

[node name="PathRapido2D" type="Path2D" parent="." groups=["path"]]
curve = SubResource("Curve2D_aaem7")
script = ExtResource("12_oj6y3")
quantityEnemy = 7
quantityEnemiesOnScreen = 1
health = 4
bullet_speed = 160

[node name="PathBoss2D" parent="." instance=ExtResource("12_ndc55")]
position = Vector2(16, 0)
script = ExtResource("14_uotdl")
enemiesEliminated = 19

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("15_p82tw")

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_lo2hu")
volume_db = -20.0

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_cw4lw")
volume_db = -15.0

[node name="inGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_haias")
volume_db = -40.0
autoplay = true
